Fix body height on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,7 +9,6 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-height: 100vh;
   min-height: 100dvh;
   background-color: #0078f8;
   font-family: 'Press Start 2P', monospace;
